--- a/index.css
+++ b/index.css
@@ -1,26 +1,96 @@
 .social-media {
     background-color: #7ab7df;
 }
+
 /* Header CSS */
 .header {
     background-color: #f5f5f5;
 }
+
 .finor-img {
     width: 30%;
 }
-.call-icon, .email-icon  {
+
+.call-icon,
+.email-icon {
     border: 1px solid;
     border-radius: 10px;
     padding: 10px 14px;
 }
-.address, .email, .phn-no {
-    font-size: 14px;
+
+.address,
+.email,
+.phn-no {
+    font-size: 12px;
 }
+
 .email a {
     text-decoration: none;
 }
-.search-icon, .lock, .cart {
+
+.search-icon,
+.lock,
+.cart {
     background-color: #3291d1;
     padding: 10px 14px;
     border-radius: 5px;
+}
+
+.nav-top {
+    background-color: #000000;
+    height: 7px;
+}
+
+.nav-link {
+    position: relative;
+    transition: background-color 0.3s ease;
+    padding: 15px 25px !important;
+    text-align: center;
+}
+
+.nav-link.active {
+    background-color: #fff !important;
+    color: #007bff !important;
+}
+
+.nav-link.active::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 54px;
+    border-bottom: 7px solid #ffffff;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    width: 110px;
+}
+.nav-item {
+    width: 110px;
+}
+
+@media (min-width: 768px) and (max-width: 990px) {
+    .finor-img {
+        width: 82%;
+    }
+}
+
+@media (min-width: 990px) and (max-width: 1200px) {
+    .address,
+    .email,
+    .phn-no {
+        font-size: 10px;
+    }
+}
+@media (max-width:992px) {
+    .nav-link.active::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0px;
+    border-bottom: 7px solid #ffffff;
+    border-left: 7px solid transparent;
+    border-right: 7px solid transparent;
+    width: 0px;
+}
 }
